--- a/templates/livres/show.html.twig
+++ b/templates/livres/show.html.twig
@@ -1,22 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil
-{% endblock %}
+{% block title %}Accueil{% endblock %}
+
 {% block body %}
-	<h1>détail du livre
-		{{livre.titre|capitalize}}
-		({{livre.prix}}
-		DT)</h1>
-	<div class="row">
-		<div class="col-3">
-			<img src="{{livre.image}}" alt="">
-		</div>
-		<h4>ISBN :{{livre.isbn}}</h4>
-		<h4>Editeur :
-			{{livre.editeur}}</h4>
-		<h4>Date Edition :
-			{{livre.editedAt|date('d-m-Y')}}</h4>
-		<p>
-			{{livre.resume}}</p>
-	</table>
-</p></div>{% endblock %}
+    <div class="card">
+        <div class="card-body">
+            <h1 class="card-title">
+			Détail du livre
+                <span class="text-primary">Détail du livre {{ livre.titre|capitalize }} ({{ livre.prix }} DT)</span>
+            </h1>
+            <div class="row">
+                <div class="col-3">
+                    <img src="{{ livre.image }}" class="img-fluid" alt="">
+                </div>
+                <div class="col-9">
+                    <h4>ISBN: {{ livre.isbn }}</h4>
+                    <h4>Editeur: {{ livre.editeur }}</h4>
+                    <h4>Date Edition: {{ livre.editedAt|date('d-m-Y') }}</h4>
+                    <p>{{ livre.resume }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
